feat: front-end basics and starting config of server

--- a/server/.env
+++ b/server/.env
@@ -1,17 +1,17 @@
 APP_HOST = http://localhost
-APP_PORT = 3000
+APP_PORT = 3001
 
 API_VERSION = v1
 
-DATABASE = express
-USERNAME = root
+DATABASE = electrom
+USERNAME = jairr
 PASSWORD = root
 HOST = 127.0.0.1
 PORT = 3306
 DIALECT = mysql
 
-DATABASE_TEST = express
-USERNAME_TEST = root
+DATABASE_TEST = electrom
+USERNAME_TEST = jairr
 PASSWORD_TEST = root
 HOST_TEST = 127.0.0.1
 PORT_TEST = 3306
