--- a/server/.env
+++ b/server/.env
@@ -16,3 +16,9 @@ PASSWORD_TEST = root
 HOST_TEST = 127.0.0.1
 PORT_TEST = 3306
 DIALECT_TEST = mysql
+
+
+# Auth Config
+AUTH_SECRET=CKZ-114
+AUTH_EXPIRES=1h
+AUTH_ROUNDS=10
