--- a/server/.env
+++ b/server/.env
@@ -4,14 +4,14 @@ APP_PORT = 3001
 API_VERSION = v1
 
 DATABASE = electrom
-USERNAME = jairr
+USERNAME = root
 PASSWORD = root
 HOST = 127.0.0.1
 PORT = 3306
 DIALECT = mysql
 
 DATABASE_TEST = electrom
-USERNAME_TEST = jairr
+USERNAME_TEST = root
 PASSWORD_TEST = root
 HOST_TEST = 127.0.0.1
 PORT_TEST = 3306
@@ -19,5 +19,5 @@ DIALECT_TEST = mysql
 
 
 # Auth Config
-AUTH_SECRET=CKZ-114
+AUTH_SECRET=CKZ
 AUTH_EXPIRES=1day
